# OxeBanking-MiddleEnd

./: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml  middle-mocked.db  middle-mocked.db-shm  middle-mocked.db-wal  test.db
.sqlx/: query-b5079b3ca682be93ba10955c844a86a5bef5af7fdd816ad4131390133ffd0957.json
db/: my_database.db
migrations/: 20241101170736_initial.sql  20241103002336_create_users_table.sql  20241103005803_create_users_and_addresses_tables.sql  20241110232714_insurances.sql
migrations/2024-11-11-000025_create_users_and_addresses/: down.sql  up.sql
migrations/2024-11-11-000632_insurances/: up.sql
migrations/2024-11-14-155959_bank-accounts/: up.sql
src/: helpers.rs  main.rs  routes.rs  schema.rs  services.rs
src/controllers/: api_controller.rs  auth_controller.rs  consortia_controller.rs  credit_card_controllers.rs  insurances_controller.rs  loans_controllers.rs  mod.rs  payments_controller.rs  users_controller.rs
src/dto/: consortia_dto.rs  credit_card_dto.rs  insurance_dto.rs  jwt.rs  loans_dto.rs  mod.rs  new_user_dto.rs  payment_dto.rs  signin_dto.rs  user.rs
src/errors/: login_errors.rs  microservices_errors.rs  mod.rs
src/microservices/: admin.rs  bank-accounts.rs  consortia.rs  credit_card.rs  insurances.rs  loans.rs  mod.rs  payments.rs
src/middleware/: auth_middleware.rs
src/migrations/: 20220101000000_create_tables.sql
src/models/: account.rs  auth.rs  insurances.rs  mod.rs  payment.rs  user.rs
src/repositories/: bank_accounts.rs  connection.rs  insurances.rs  mod.rs
src/routes/: api_routes.rs  auth_routes.rs  mod.rs
src/services/: auth_service.rs  external_api_service.rs  mod.rs  sign_in_service.rs  sign_up_service.rs  users_services.rs
