[package]
name = "rust-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }
actix-web = "4.0.1"
actix-service = "2.0.1"
actix-cors = "0.7.0"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
serde_json = "1.0.95"
reqwest = { version = "0.12.8", features = ["json"] }
openssl-sys = "0.9.103"
futures = "0.3.31"
log = "0.4.22"
env_logger = "0.11.5"
